Fix Kurs 4.4 poor alignment of courses on enroll screen.

--- a/src/css/modules/allcourseslist.less
+++ b/src/css/modules/allcourseslist.less
@@ -27,6 +27,16 @@
   }
 }
 
+.mmooc-enroll-category {
+    -webkit-column-break-inside: avoid;
+              page-break-inside: avoid;
+                   break-inside: avoid;
+}
+
+.mmooc-enroll-category-title {
+    margin:0;
+}
+
 .mmooc-all-courses-list {
     clear: right;
     position: relative;
